--- a/docs/posts/13wk-2.out.ipynb
+++ b/docs/posts/13wk-2.out.ipynb
@@ -13,7 +13,7 @@
         "\n",
         "# 1. 강의영상"
       ],
-      "id": "aabbbf90-4afa-443b-bffc-8d0251b93e4d"
+      "id": "5cf82b8e-6781-48b9-9cfd-1ea18dce2e83"
     },
     {
       "cell_type": "code",
@@ -31,31 +31,19 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# 2. 환경셋팅 ($\\star\\star\\star$)\n",
-        "\n",
-        "`-` 설치 (코랩)\n",
-        "\n",
-        "``` python\n",
-        "!pip install -q swig\n",
-        "!pip install gymnasium\n",
-        "!pip install gymnasium[box2d]\n",
-        "```\n",
-        "\n",
-        "# 3. Imports"
+        "# 2. Imports"
       ],
-      "id": "347ceaa0-2501-4db0-b3c5-bca35c504d44"
+      "id": "eaca3eef-bd28-4c5d-80a3-53f084dedeff"
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 149,
       "metadata": {
         "tags": []
       },
       "outputs": [],
       "source": [
-        "import gymnasium as gym\n",
-        "import numpy as np\n",
-        "import matplotlib.pyplot as plt"
+        "import numpy as np"
       ],
       "id": "da124c05-12c5-4e50-b7c2-c7156427cc82"
     },
@@ -63,9 +51,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "-   ref: <https://gymnasium.farama.org/index.html>\n",
-        "\n",
-        "# 4. 강화학습 Intro\n",
+        "# 3. 강화학습 Intro\n",
         "\n",
         "`-` 강화학습(대충설명): 어떠한 “(게임)환경”이 있을때 거기서 “뭘 할지”를\n",
         "학습하는 과업\n",
@@ -76,7 +62,7 @@
         "\n",
         "`-` 강화학습 미래? (이거 잘하면 먹고 살 수 있을까?)\n",
         "\n",
-        "# 5. Game1: `Bandit` 게임\n",
+        "# 4. Game1: `Bandit` 게임\n",
         "\n",
         "## A. 게임설명 및 원시코드\n",
         "\n",
@@ -90,7 +76,7 @@
         "\n",
         "`-` 버튼을 아무거나 누르는 코드를 작성해보자."
       ],
-      "id": "82eaaae5-9e16-49c7-b721-931c140fdf07"
+      "id": "b82db45c-d567-44cc-b237-76a07d126600"
     },
     {
       "cell_type": "code",
@@ -112,9 +98,9 @@
       "source": [
         "> `action_space` 와 `action` 이라는 용어를 기억할 것\n",
         "\n",
-        "`-` 버튼을 누른 행위에 따른 보상을 구현하자. 함수를 구현해보자."
+        "`-` 버튼을 누른 행위에 따른 보상을 구현하자."
       ],
-      "id": "2e25647c-dda5-46f1-a332-1bb1ffdcd0dc"
+      "id": "ec07875e-2f84-4a85-999a-a12f3d80de94"
     },
     {
       "cell_type": "code",
@@ -137,7 +123,7 @@
       "source": [
         "> `reward`라는 용어를 기억할 것"
       ],
-      "id": "bda740e0-c116-4d5a-922c-0e8285ed2f1d"
+      "id": "7191c69e-3c8b-4d14-9450-c47a0c533827"
     },
     {
       "cell_type": "code",
@@ -157,7 +143,7 @@
       "source": [
         "`-` 아무버튼이나 10번정도 눌러보면서 데이터를 쌓아보자."
       ],
-      "id": "dc0aebf6-5e92-47e3-9305-7d2fced4bc6b"
+      "id": "c8f8361b-b905-4fb6-be01-d61b35b76cbc"
     },
     {
       "cell_type": "code",
@@ -206,7 +192,7 @@
         "\n",
         "> `environment`라는 용어를 기억할 것"
       ],
-      "id": "86e99d48-2d13-4a5b-996a-7d5d02543525"
+      "id": "f4ead3c7-0864-4239-95b8-2e07e7af485d"
     },
     {
       "cell_type": "code",
@@ -273,7 +259,7 @@
         "\n",
         "[1] `버튼1`을 눌러야 하는건 맞지만 몇번의 실수는 눈감아 주자는 의미"
       ],
-      "id": "1bb69e2c-b7bf-4944-afae-4dc1608eb6c7"
+      "id": "0c6bf3ef-132c-4022-aa4f-434d9e50ce44"
     },
     {
       "cell_type": "code",
@@ -376,7 +362,7 @@
       "source": [
         "`-` 원시코드2: 환경을 깨달은 에이전트 – 게임클리어"
       ],
-      "id": "82c7ff23-4003-47f5-8b7b-a963c99017fe"
+      "id": "283c58e4-c7bb-4d58-b52e-a97ea1d320fe"
     },
     {
       "cell_type": "code",
@@ -454,7 +440,7 @@
         "\n",
         "`-` `Bandit` 클래스 선언 + `.step()` 구현"
       ],
-      "id": "e29dbe56-39e5-4fa9-844f-e649b2007111"
+      "id": "3fc2485f-9f67-4049-a0ab-e0b2b79a5886"
     },
     {
       "cell_type": "code",
@@ -577,7 +563,7 @@
         "-   액션을 하고, 본인의 행동과 환경에서 받은 reward를 기억\n",
         "-   `.act()`함수와 `.save_experience()`함수 구현"
       ],
-      "id": "445ac550-ba50-480f-8416-48c827ad7444"
+      "id": "f6bd27f5-2d0a-42b8-af94-eb4aa87199f9"
     },
     {
       "cell_type": "code",
@@ -611,7 +597,7 @@
         "\n",
         "**시점0**: init"
       ],
-      "id": "54eaa539-0d09-44e7-a550-d26f3c261fbe"
+      "id": "8f0a15be-7a58-4a7d-85ed-92591854b5d5"
     },
     {
       "cell_type": "code",
@@ -644,7 +630,7 @@
       "source": [
         "**시점1**: agent \\>\\> env"
       ],
-      "id": "02f231de-77e7-4893-9bdd-fabe27b09d10"
+      "id": "1a4a87dc-62e8-45a6-8a98-0f3570d4274d"
     },
     {
       "cell_type": "code",
@@ -688,7 +674,7 @@
       "source": [
         "**시점2**: agent \\<\\< env"
       ],
-      "id": "961306cf-e87d-45d2-81ec-907206243f4d"
+      "id": "98209324-60b2-4957-8223-b3731bc1a14a"
     },
     {
       "cell_type": "code",
@@ -756,7 +742,7 @@
       "source": [
         "– 전체코드 –"
       ],
-      "id": "8ba8ad3c-b82c-40e6-83dd-fff016bed209"
+      "id": "14c09a97-c08a-46d2-a797-f8a715ff8ea7"
     },
     {
       "cell_type": "code",
@@ -886,7 +872,7 @@
         "\n",
         "[1] `버튼1`을 누른다"
       ],
-      "id": "52c4b311-bdcb-4656-8f12-49f19d9eae7e"
+      "id": "64beb0b5-26c1-48f9-87e5-dbca56e0ea72"
     },
     {
       "cell_type": "code",
@@ -961,7 +947,7 @@
       "source": [
         "`-` 최종코드정리"
       ],
-      "id": "7b1b1746-21fa-473e-ab61-9c9ae4f59fe9"
+      "id": "7a89254f-d00b-4afc-8e81-002bb81c9e60"
     },
     {
       "cell_type": "code",
