--- a/docs/posts/13wk-2.out.ipynb
+++ b/docs/posts/13wk-2.out.ipynb
@@ -4,7 +4,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# 13wk-1: 강화학습 (1) – bandit\n",
+        "# 13wk-2: 강화학습 (1) – Bandit\n",
         "\n",
         "최규빈  \n",
         "2024-05-29\n",
@@ -13,7 +13,7 @@
         "\n",
         "# 1. 강의영상"
       ],
-      "id": "5cf82b8e-6781-48b9-9cfd-1ea18dce2e83"
+      "id": "20ee58dc-dda9-4dd9-8e8b-503ff139584a"
     },
     {
       "cell_type": "code",
@@ -33,7 +33,7 @@
       "source": [
         "# 2. Imports"
       ],
-      "id": "eaca3eef-bd28-4c5d-80a3-53f084dedeff"
+      "id": "302edb66-1cdb-4bb9-9d43-c437434f0d0a"
     },
     {
       "cell_type": "code",
@@ -76,7 +76,7 @@
         "\n",
         "`-` 버튼을 아무거나 누르는 코드를 작성해보자."
       ],
-      "id": "b82db45c-d567-44cc-b237-76a07d126600"
+      "id": "8c473f60-9412-4d08-af3b-d3ebe0908afa"
     },
     {
       "cell_type": "code",
@@ -100,7 +100,7 @@
         "\n",
         "`-` 버튼을 누른 행위에 따른 보상을 구현하자."
       ],
-      "id": "ec07875e-2f84-4a85-999a-a12f3d80de94"
+      "id": "c015c0d7-c48b-4867-8986-14d1cd8bf2b4"
     },
     {
       "cell_type": "code",
@@ -123,7 +123,7 @@
       "source": [
         "> `reward`라는 용어를 기억할 것"
       ],
-      "id": "7191c69e-3c8b-4d14-9450-c47a0c533827"
+      "id": "42830f38-ddb2-4f1c-a216-a48c9d1014ad"
     },
     {
       "cell_type": "code",
@@ -143,7 +143,7 @@
       "source": [
         "`-` 아무버튼이나 10번정도 눌러보면서 데이터를 쌓아보자."
       ],
-      "id": "c8f8361b-b905-4fb6-be01-d61b35b76cbc"
+      "id": "cc06ce4d-2b48-4dd5-99b1-891f19c6cc32"
     },
     {
       "cell_type": "code",
@@ -192,7 +192,7 @@
         "\n",
         "> `environment`라는 용어를 기억할 것"
       ],
-      "id": "f4ead3c7-0864-4239-95b8-2e07e7af485d"
+      "id": "d173bfa5-4ebf-42b2-a638-b4aa75c7035b"
     },
     {
       "cell_type": "code",
@@ -259,7 +259,7 @@
         "\n",
         "[1] `버튼1`을 눌러야 하는건 맞지만 몇번의 실수는 눈감아 주자는 의미"
       ],
-      "id": "0c6bf3ef-132c-4022-aa4f-434d9e50ce44"
+      "id": "a1446548-5c54-4203-8173-f7fed9941bcd"
     },
     {
       "cell_type": "code",
@@ -362,7 +362,7 @@
       "source": [
         "`-` 원시코드2: 환경을 깨달은 에이전트 – 게임클리어"
       ],
-      "id": "283c58e4-c7bb-4d58-b52e-a97ea1d320fe"
+      "id": "e6ea3d95-d8d7-4cfe-a8fd-4e4268351394"
     },
     {
       "cell_type": "code",
@@ -440,7 +440,7 @@
         "\n",
         "`-` `Bandit` 클래스 선언 + `.step()` 구현"
       ],
-      "id": "3fc2485f-9f67-4049-a0ab-e0b2b79a5886"
+      "id": "791c7084-0c7e-463e-833c-bee20e1cb514"
     },
     {
       "cell_type": "code",
@@ -563,7 +563,7 @@
         "-   액션을 하고, 본인의 행동과 환경에서 받은 reward를 기억\n",
         "-   `.act()`함수와 `.save_experience()`함수 구현"
       ],
-      "id": "f6bd27f5-2d0a-42b8-af94-eb4aa87199f9"
+      "id": "ea812a1c-1dfe-4763-b0e1-512538a20403"
     },
     {
       "cell_type": "code",
@@ -597,7 +597,7 @@
         "\n",
         "**시점0**: init"
       ],
-      "id": "8f0a15be-7a58-4a7d-85ed-92591854b5d5"
+      "id": "5e05c90c-13db-442f-89d2-63bb1fc55f8c"
     },
     {
       "cell_type": "code",
@@ -630,7 +630,7 @@
       "source": [
         "**시점1**: agent \\>\\> env"
       ],
-      "id": "1a4a87dc-62e8-45a6-8a98-0f3570d4274d"
+      "id": "2ee33252-ca9c-4a89-b40d-051608b79f32"
     },
     {
       "cell_type": "code",
@@ -674,7 +674,7 @@
       "source": [
         "**시점2**: agent \\<\\< env"
       ],
-      "id": "98209324-60b2-4957-8223-b3731bc1a14a"
+      "id": "44c383dd-8c5c-4ae1-971b-4fa686ce8010"
     },
     {
       "cell_type": "code",
@@ -742,7 +742,7 @@
       "source": [
         "– 전체코드 –"
       ],
-      "id": "14c09a97-c08a-46d2-a797-f8a715ff8ea7"
+      "id": "98d33031-bef0-4747-8230-fb95d7822b7f"
     },
     {
       "cell_type": "code",
@@ -872,7 +872,7 @@
         "\n",
         "[1] `버튼1`을 누른다"
       ],
-      "id": "64beb0b5-26c1-48f9-87e5-dbca56e0ea72"
+      "id": "850c5cb5-44a4-4319-8355-18897e2f1b18"
     },
     {
       "cell_type": "code",
@@ -947,7 +947,7 @@
       "source": [
         "`-` 최종코드정리"
       ],
-      "id": "7a89254f-d00b-4afc-8e81-002bb81c9e60"
+      "id": "a717a290-e305-4e84-83f0-ea2fb594bbb5"
     },
     {
       "cell_type": "code",
