--- a/docs/posts/13wk-2.out.ipynb
+++ b/docs/posts/13wk-2.out.ipynb
@@ -13,7 +13,7 @@
         "\n",
         "# 1. 강의영상"
       ],
-      "id": "20ee58dc-dda9-4dd9-8e8b-503ff139584a"
+      "id": "b3bdaf4b-43ea-438f-9e48-a6a404b33fb7"
     },
     {
       "cell_type": "code",
@@ -33,7 +33,7 @@
       "source": [
         "# 2. Imports"
       ],
-      "id": "302edb66-1cdb-4bb9-9d43-c437434f0d0a"
+      "id": "82f0d0c2-48e1-4e37-9720-5673f4ca080c"
     },
     {
       "cell_type": "code",
@@ -76,7 +76,7 @@
         "\n",
         "`-` 버튼을 아무거나 누르는 코드를 작성해보자."
       ],
-      "id": "8c473f60-9412-4d08-af3b-d3ebe0908afa"
+      "id": "d0fe9120-9432-4181-9ced-27defa6c6efa"
     },
     {
       "cell_type": "code",
@@ -100,7 +100,7 @@
         "\n",
         "`-` 버튼을 누른 행위에 따른 보상을 구현하자."
       ],
-      "id": "c015c0d7-c48b-4867-8986-14d1cd8bf2b4"
+      "id": "2de6de9b-7770-4ff0-8668-3d8d2fa3e706"
     },
     {
       "cell_type": "code",
@@ -123,7 +123,7 @@
       "source": [
         "> `reward`라는 용어를 기억할 것"
       ],
-      "id": "42830f38-ddb2-4f1c-a216-a48c9d1014ad"
+      "id": "53b9fb8c-8280-490c-8441-a468087ec025"
     },
     {
       "cell_type": "code",
@@ -143,7 +143,7 @@
       "source": [
         "`-` 아무버튼이나 10번정도 눌러보면서 데이터를 쌓아보자."
       ],
-      "id": "cc06ce4d-2b48-4dd5-99b1-891f19c6cc32"
+      "id": "8842cc30-b3a5-452e-b7cf-1653956eb791"
     },
     {
       "cell_type": "code",
@@ -192,7 +192,7 @@
         "\n",
         "> `environment`라는 용어를 기억할 것"
       ],
-      "id": "d173bfa5-4ebf-42b2-a638-b4aa75c7035b"
+      "id": "4d53cb9e-d363-43ef-817b-55090f79ea8f"
     },
     {
       "cell_type": "code",
@@ -253,13 +253,13 @@
         "-   첫 생각: `버튼1`을 누르는 순간 게임클리어로 보면 되지 않나?\n",
         "-   두번째 생각: 아니지? 우연히 누를수도 있잖아?\n",
         "-   게임클리어조건: (1) 20번은 그냥 진행 (2) 최근 20번의 보상의 평균이\n",
-        "    95점 이상이면 게임이 클리어 되었다고 생각하자.[1]\n",
+        "    9.5점 이상이면 게임이 클리어 되었다고 생각하자.[1]\n",
         "\n",
         "`-` 원시코드1: 환경을 이해하지 못한 에이전트 – 게임을 클리어할 수 없다.\n",
         "\n",
         "[1] `버튼1`을 눌러야 하는건 맞지만 몇번의 실수는 눈감아 주자는 의미"
       ],
-      "id": "a1446548-5c54-4203-8173-f7fed9941bcd"
+      "id": "26947152-66ab-4e21-aaa9-cac8ab1e787f"
     },
     {
       "cell_type": "code",
@@ -362,7 +362,7 @@
       "source": [
         "`-` 원시코드2: 환경을 깨달은 에이전트 – 게임클리어"
       ],
-      "id": "e6ea3d95-d8d7-4cfe-a8fd-4e4268351394"
+      "id": "6874b14b-f22e-4940-bce5-dbf9ab22d749"
     },
     {
       "cell_type": "code",
@@ -440,7 +440,7 @@
         "\n",
         "`-` `Bandit` 클래스 선언 + `.step()` 구현"
       ],
-      "id": "791c7084-0c7e-463e-833c-bee20e1cb514"
+      "id": "146bbc5c-cded-4fdb-9231-5bce3600100a"
     },
     {
       "cell_type": "code",
@@ -563,7 +563,7 @@
         "-   액션을 하고, 본인의 행동과 환경에서 받은 reward를 기억\n",
         "-   `.act()`함수와 `.save_experience()`함수 구현"
       ],
-      "id": "ea812a1c-1dfe-4763-b0e1-512538a20403"
+      "id": "4940f870-c799-4b4b-9137-8534ef2fcc19"
     },
     {
       "cell_type": "code",
@@ -597,7 +597,7 @@
         "\n",
         "**시점0**: init"
       ],
-      "id": "5e05c90c-13db-442f-89d2-63bb1fc55f8c"
+      "id": "52922ae3-e30c-4e69-be83-eb59da42a3e9"
     },
     {
       "cell_type": "code",
@@ -628,9 +628,9 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "**시점1**: agent \\>\\> env"
+        "**시점1**: agent가 actoin을 선택"
       ],
-      "id": "2ee33252-ca9c-4a89-b40d-051608b79f32"
+      "id": "e9dd529f-cb62-46da-a85e-f211c8177aa2"
     },
     {
       "cell_type": "code",
@@ -657,24 +657,12 @@
       "id": "88ca0c67-6c67-461b-adad-5781c23e366a"
     },
     {
-      "cell_type": "code",
-      "execution_count": 141,
-      "metadata": {
-        "tags": []
-      },
-      "outputs": [],
-      "source": [
-        "env.agent_action = agent.action"
-      ],
-      "id": "390746fe-70f2-42ff-97e7-02872bf725fe"
-    },
-    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "**시점2**: agent \\<\\< env"
+        "**시점2**: env가 agent에게 보상을 줌"
       ],
-      "id": "44c383dd-8c5c-4ae1-971b-4fa686ce8010"
+      "id": "ba75a1d7-d6be-4fba-ac83-25509af8623b"
     },
     {
       "cell_type": "code",
@@ -684,7 +672,7 @@
       },
       "outputs": [],
       "source": [
-        "agent.reward = env.step(env.agent_action)"
+        "agent.reward = env.step(agent.action)"
       ],
       "id": "0c06f08a-96f0-454f-bb0e-76f3b80650a0"
     },
@@ -696,7 +684,7 @@
       },
       "outputs": [],
       "source": [
-        "agent.action, agent.reward, env.agent_action"
+        "agent.action, agent.reward"
       ],
       "id": "92121832-fc74-40ca-885b-1b7ebbc0b2ef"
     },
@@ -711,6 +699,14 @@
         "agent.actions,agent.rewards"
       ],
       "id": "5de5658f-352b-4080-a452-c7b9ceb32181"
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "**시점3**: 경험을 저장"
+      ],
+      "id": "e29ed91b-99c1-4255-b106-03ec03b5b889"
     },
     {
       "cell_type": "code",
@@ -742,11 +738,11 @@
       "source": [
         "– 전체코드 –"
       ],
-      "id": "98d33031-bef0-4747-8230-fb95d7822b7f"
+      "id": "412b2374-d9a0-4cef-8b5b-0c30ba10d765"
     },
     {
       "cell_type": "code",
-      "execution_count": 148,
+      "execution_count": 151,
       "metadata": {
         "tags": []
       },
@@ -757,54 +753,54 @@
           "text": [
             "n_try = 1   action = 0  reward = 1  mean(recent_rewards) = 1.0\n",
             "n_try = 2   action = 1  reward = 10 mean(recent_rewards) = 5.5\n",
-            "n_try = 3   action = 1  reward = 10 mean(recent_rewards) = 7.0\n",
-            "n_try = 4   action = 1  reward = 10 mean(recent_rewards) = 7.75\n",
-            "n_try = 5   action = 0  reward = 1  mean(recent_rewards) = 6.4\n",
-            "n_try = 6   action = 0  reward = 1  mean(recent_rewards) = 5.5\n",
+            "n_try = 3   action = 0  reward = 1  mean(recent_rewards) = 4.0\n",
+            "n_try = 4   action = 1  reward = 10 mean(recent_rewards) = 5.5\n",
+            "n_try = 5   action = 0  reward = 1  mean(recent_rewards) = 4.6\n",
+            "n_try = 6   action = 1  reward = 10 mean(recent_rewards) = 5.5\n",
             "n_try = 7   action = 1  reward = 10 mean(recent_rewards) = 6.142857142857143\n",
             "n_try = 8   action = 1  reward = 10 mean(recent_rewards) = 6.625\n",
-            "n_try = 9   action = 0  reward = 1  mean(recent_rewards) = 6.0\n",
-            "n_try = 10  action = 0  reward = 1  mean(recent_rewards) = 5.5\n",
-            "n_try = 11  action = 1  reward = 10 mean(recent_rewards) = 5.909090909090909\n",
-            "n_try = 12  action = 0  reward = 1  mean(recent_rewards) = 5.5\n",
-            "n_try = 13  action = 0  reward = 1  mean(recent_rewards) = 5.153846153846154\n",
-            "n_try = 14  action = 0  reward = 1  mean(recent_rewards) = 4.857142857142857\n",
-            "n_try = 15  action = 1  reward = 10 mean(recent_rewards) = 5.2\n",
-            "n_try = 16  action = 0  reward = 1  mean(recent_rewards) = 4.9375\n",
-            "n_try = 17  action = 1  reward = 10 mean(recent_rewards) = 5.235294117647059\n",
+            "n_try = 9   action = 1  reward = 10 mean(recent_rewards) = 7.0\n",
+            "n_try = 10  action = 1  reward = 10 mean(recent_rewards) = 7.3\n",
+            "n_try = 11  action = 0  reward = 1  mean(recent_rewards) = 6.7272727272727275\n",
+            "n_try = 12  action = 0  reward = 1  mean(recent_rewards) = 6.25\n",
+            "n_try = 13  action = 1  reward = 10 mean(recent_rewards) = 6.538461538461538\n",
+            "n_try = 14  action = 0  reward = 1  mean(recent_rewards) = 6.142857142857143\n",
+            "n_try = 15  action = 0  reward = 1  mean(recent_rewards) = 5.8\n",
+            "n_try = 16  action = 0  reward = 1  mean(recent_rewards) = 5.5\n",
+            "n_try = 17  action = 0  reward = 1  mean(recent_rewards) = 5.235294117647059\n",
             "n_try = 18  action = 0  reward = 1  mean(recent_rewards) = 5.0\n",
             "n_try = 19  action = 1  reward = 10 mean(recent_rewards) = 5.2631578947368425\n",
             "n_try = 20  action = 1  reward = 10 mean(recent_rewards) = 5.5\n",
             "n_try = 21  action = 0  reward = 1  mean(recent_rewards) = 5.5\n",
             "n_try = 22  action = 1  reward = 10 mean(recent_rewards) = 5.5\n",
-            "n_try = 23  action = 1  reward = 10 mean(recent_rewards) = 5.5\n",
-            "n_try = 24  action = 1  reward = 10 mean(recent_rewards) = 5.5\n",
+            "n_try = 23  action = 1  reward = 10 mean(recent_rewards) = 5.95\n",
+            "n_try = 24  action = 0  reward = 1  mean(recent_rewards) = 5.5\n",
             "n_try = 25  action = 1  reward = 10 mean(recent_rewards) = 5.95\n",
-            "n_try = 26  action = 1  reward = 10 mean(recent_rewards) = 6.4\n",
-            "n_try = 27  action = 1  reward = 10 mean(recent_rewards) = 6.4\n",
-            "n_try = 28  action = 0  reward = 1  mean(recent_rewards) = 5.95\n",
-            "n_try = 29  action = 0  reward = 1  mean(recent_rewards) = 5.95\n",
-            "n_try = 30  action = 1  reward = 10 mean(recent_rewards) = 6.4\n",
-            "n_try = 31  action = 1  reward = 10 mean(recent_rewards) = 6.4\n",
-            "n_try = 32  action = 1  reward = 10 mean(recent_rewards) = 6.85\n",
-            "n_try = 33  action = 0  reward = 1  mean(recent_rewards) = 6.85\n",
-            "n_try = 34  action = 0  reward = 1  mean(recent_rewards) = 6.85\n",
-            "n_try = 35  action = 0  reward = 1  mean(recent_rewards) = 6.4\n",
-            "n_try = 36  action = 0  reward = 1  mean(recent_rewards) = 6.4\n",
-            "n_try = 37  action = 0  reward = 1  mean(recent_rewards) = 5.95\n",
-            "n_try = 38  action = 0  reward = 1  mean(recent_rewards) = 5.95\n",
-            "n_try = 39  action = 0  reward = 1  mean(recent_rewards) = 5.5\n",
-            "n_try = 40  action = 0  reward = 1  mean(recent_rewards) = 5.05\n",
-            "n_try = 41  action = 0  reward = 1  mean(recent_rewards) = 5.05\n",
-            "n_try = 42  action = 1  reward = 10 mean(recent_rewards) = 5.05\n",
-            "n_try = 43  action = 1  reward = 10 mean(recent_rewards) = 5.05\n",
-            "n_try = 44  action = 1  reward = 10 mean(recent_rewards) = 5.05\n",
-            "n_try = 45  action = 1  reward = 10 mean(recent_rewards) = 5.05\n",
-            "n_try = 46  action = 1  reward = 10 mean(recent_rewards) = 5.05\n",
-            "n_try = 47  action = 1  reward = 10 mean(recent_rewards) = 5.05\n",
-            "n_try = 48  action = 1  reward = 10 mean(recent_rewards) = 5.5\n",
-            "n_try = 49  action = 0  reward = 1  mean(recent_rewards) = 5.5\n",
-            "n_try = 50  action = 1  reward = 10 mean(recent_rewards) = 5.5"
+            "n_try = 26  action = 1  reward = 10 mean(recent_rewards) = 5.95\n",
+            "n_try = 27  action = 0  reward = 1  mean(recent_rewards) = 5.5\n",
+            "n_try = 28  action = 0  reward = 1  mean(recent_rewards) = 5.05\n",
+            "n_try = 29  action = 0  reward = 1  mean(recent_rewards) = 4.6\n",
+            "n_try = 30  action = 1  reward = 10 mean(recent_rewards) = 4.6\n",
+            "n_try = 31  action = 0  reward = 1  mean(recent_rewards) = 4.6\n",
+            "n_try = 32  action = 1  reward = 10 mean(recent_rewards) = 5.05\n",
+            "n_try = 33  action = 1  reward = 10 mean(recent_rewards) = 5.05\n",
+            "n_try = 34  action = 1  reward = 10 mean(recent_rewards) = 5.5\n",
+            "n_try = 35  action = 0  reward = 1  mean(recent_rewards) = 5.5\n",
+            "n_try = 36  action = 0  reward = 1  mean(recent_rewards) = 5.5\n",
+            "n_try = 37  action = 1  reward = 10 mean(recent_rewards) = 5.95\n",
+            "n_try = 38  action = 1  reward = 10 mean(recent_rewards) = 6.4\n",
+            "n_try = 39  action = 1  reward = 10 mean(recent_rewards) = 6.4\n",
+            "n_try = 40  action = 1  reward = 10 mean(recent_rewards) = 6.4\n",
+            "n_try = 41  action = 1  reward = 10 mean(recent_rewards) = 6.85\n",
+            "n_try = 42  action = 1  reward = 10 mean(recent_rewards) = 6.85\n",
+            "n_try = 43  action = 1  reward = 10 mean(recent_rewards) = 6.85\n",
+            "n_try = 44  action = 1  reward = 10 mean(recent_rewards) = 7.3\n",
+            "n_try = 45  action = 0  reward = 1  mean(recent_rewards) = 6.85\n",
+            "n_try = 46  action = 0  reward = 1  mean(recent_rewards) = 6.4\n",
+            "n_try = 47  action = 0  reward = 1  mean(recent_rewards) = 6.4\n",
+            "n_try = 48  action = 0  reward = 1  mean(recent_rewards) = 6.4\n",
+            "n_try = 49  action = 0  reward = 1  mean(recent_rewards) = 6.4\n",
+            "n_try = 50  action = 1  reward = 10 mean(recent_rewards) = 6.4"
           ]
         }
       ],
@@ -812,11 +808,11 @@
         "env = Bandit() \n",
         "agent = Agent()\n",
         "for t in range(1,51): \n",
-        "    # step1: agent >> env \n",
+        "    # step1: 행동\n",
         "    agent.act() \n",
-        "    env.agent_action = agent.action\n",
-        "    # step2: agent << env \n",
-        "    agent.reward = env.step(env.agent_action)\n",
+        "    # step2: 보상\n",
+        "    agent.reward = env.step(agent.action)\n",
+        "    # step3: 저장 \n",
         "    agent.save_experience()  \n",
         "    #--# \n",
         "    print(\n",
@@ -872,7 +868,7 @@
         "\n",
         "[1] `버튼1`을 누른다"
       ],
-      "id": "850c5cb5-44a4-4319-8355-18897e2f1b18"
+      "id": "8c9f8657-5be6-4516-99ad-297af17d75c0"
     },
     {
       "cell_type": "code",
@@ -947,7 +943,7 @@
       "source": [
         "`-` 최종코드정리"
       ],
-      "id": "a717a290-e305-4e84-83f0-ea2fb594bbb5"
+      "id": "b88adaad-0582-4061-9814-15431364aa0a"
     },
     {
       "cell_type": "code",
@@ -1054,14 +1050,13 @@
         "agent = Agent()\n",
         "for t in range(50): \n",
         "    ## 1. main 코드 \n",
-        "    # step1: agent >> env \n",
+        "    # step1: 행동\n",
         "    agent.act() \n",
-        "    env.agent_action = agent.action\n",
-        "    # step2: agent << env \n",
-        "    agent.reward = env.step(env.agent_action)\n",
-        "    agent.save_experience() \n",
-        "    # step3: learn \n",
+        "    # step2: 보상\n",
+        "    agent.reward = env.step(agent.action)\n",
+        "    # step3: 저장 & 학습\n",
         "    agent.learn()\n",
+        "    agent.save_experience()     \n",
         "    #--# \n",
         "    print(\n",
         "        f\"n_try = {t+1}\\t\"\n",
