--- a/docs/posts/04wk-2.out.ipynb
+++ b/docs/posts/04wk-2.out.ipynb
@@ -17,7 +17,7 @@
         "\n",
         "# 2. Imports"
       ],
-      "id": "6f146d65-1432-466f-9b13-82943da5f12b"
+      "id": "9a752a98-69e6-4275-95d6-33c7eb7c616f"
     },
     {
       "cell_type": "code",
@@ -63,7 +63,7 @@
         "model: $y_i = (0\\times x_i) + \\epsilon_i$, where\n",
         "$\\epsilon_i \\sim N(0,0.01^2)$"
       ],
-      "id": "087d8f80-dd6d-4ce7-a74f-1fbf8f3079b8"
+      "id": "1a1a6a94-a46c-48ab-b86f-dbf371d3fa76"
     },
     {
       "cell_type": "code",
@@ -95,7 +95,7 @@
         "-   y는 그냥 정규분포에서 생성한 오차이므로 $X \\to y$ 로 향하는\n",
         "    규칙따위는 없음"
       ],
-      "id": "7065beda-12eb-423c-829f-37626cf1909e"
+      "id": "1db7b00e-4b51-4e3c-a506-a580ddf9fad0"
     },
     {
       "cell_type": "code",
@@ -158,7 +158,7 @@
         "\n",
         "`-` 데이터의 분리하여 보자."
       ],
-      "id": "6b420020-6360-4f7d-911e-0d4d7940dc0e"
+      "id": "f0c3abbd-a3bb-4657-9271-1744cd0602b0"
     },
     {
       "cell_type": "code",
@@ -195,7 +195,7 @@
       "source": [
         "`-` train만 학습"
       ],
-      "id": "feb552d5-0918-422d-b263-f127ce84a603"
+      "id": "801b49fa-5089-4498-864e-6dfd4f8d37d6"
     },
     {
       "cell_type": "code",
@@ -232,7 +232,7 @@
       "source": [
         "`-` training data로 학습한 net를 training data 에 적용"
       ],
-      "id": "e645d7da-1aa7-492a-a89c-edfd602ae9a3"
+      "id": "ff96eff5-4f05-4836-8ce1-eff7d7443b3c"
     },
     {
       "cell_type": "code",
@@ -265,7 +265,7 @@
         "\n",
         "`-` training data로 학습한 net를 test data 에 적용"
       ],
-      "id": "8d0b55f7-701e-47e8-a04a-32a41e854146"
+      "id": "b027aac0-a7b7-4efb-b01a-c17c1d909d4c"
     },
     {
       "cell_type": "code",
@@ -345,7 +345,7 @@
         "[1] 여기에서 우수하다는 말은 여러의미가 있어요, 오버피팅이 없는\n",
         "신경망이라든가, 경제적인 신경망이라든가.."
       ],
-      "id": "e1e03eec-31ee-4eec-b40e-e2b6808beee9"
+      "id": "d417db9a-60d2-498b-9c9d-4b2ef84e5b1b"
     },
     {
       "cell_type": "code",
@@ -382,7 +382,7 @@
       "source": [
         "`-` 학습"
       ],
-      "id": "c6c1e0f0-e669-4100-b45a-a86b7a968edb"
+      "id": "7aea34ea-3906-4914-a0ac-03d734ca4f6f"
     },
     {
       "cell_type": "code",
@@ -421,7 +421,7 @@
       "source": [
         "`-` 결과시각화 (잘못된 사용)"
       ],
-      "id": "eb277595-b594-42bd-a516-2dc12e104e25"
+      "id": "7d064201-9417-4b0a-873c-534becddc6cc"
     },
     {
       "cell_type": "code",
@@ -456,7 +456,7 @@
         "\n",
         "`-` 결과시각화 (올바른 사용)"
       ],
-      "id": "2b7ef7d2-b6ca-43fe-9dbc-abbcabb931b8"
+      "id": "edc395b2-a381-4c30-a200-10099f644cea"
     },
     {
       "cell_type": "code",
@@ -515,7 +515,7 @@
         "\n",
         "## B. 드랍아웃 레이어"
       ],
-      "id": "14f25c2d-8a7a-480e-bfef-56575029cb96"
+      "id": "87124626-4f78-4cce-9f00-55770d605d6b"
     },
     {
       "cell_type": "code",
@@ -573,7 +573,7 @@
         "\n",
         "`-` ReLU + dropout의 특이한 성질"
       ],
-      "id": "c7ef1b2a-d7d1-4699-873a-bfde46bd92f7"
+      "id": "565cface-129a-4f5c-83ee-1aada9927c99"
     },
     {
       "cell_type": "code",
@@ -694,7 +694,7 @@
         "“선형변환+비선형변환”이 반복되는 구조이다. “선형변환+비선형변환”을\n",
         "하나의 세트로 보면 아래와 같이 표현할 수 있다.\n",
         "\n",
-        "-   $\\underset{(n,1)}{\\bf X}  \\overset{l_1}{\\to} \\left( \\underset{(n,2)}{\\boldsymbol u^{(1)}} \\overset{relu}{\\to} \\underset{(n,2)}{\\boldsymbol v^{(1)}} \\right) \\overset{l_2}{\\to} \\left(\\underset{(n,1)}{\\boldsymbol u^{(2)}} \\overset{sig}{\\to} \\underset{(n,1)}{\\boldsymbol v^{(2)}}\\right), \\quad  \\underset{(n,1)}{\\boldsymbol v^{(2)}}=\\underset{(n,1)}{net({\\bf X})}=\\underset{(n,1)}{\\hat{\\boldsymbol y}}$\n",
+        "-   $\\underset{(n,1)}{\\bf X} \\overset{l_1}{\\to} \\left( \\underset{(n,2)}{\\boldsymbol u^{(1)}} \\overset{relu}{\\to} \\underset{(n,2)}{\\boldsymbol v^{(1)}} \\right) \\overset{l_2}{\\to} \\left(\\underset{(n,1)}{\\boldsymbol u^{(2)}} \\overset{sig}{\\to} \\underset{(n,1)}{\\boldsymbol v^{(2)}}\\right), \\quad \\underset{(n,1)}{\\boldsymbol v^{(2)}}=\\underset{(n,1)}{net({\\bf X})}=\\underset{(n,1)}{\\hat{\\boldsymbol y}}$\n",
         "\n",
         "이것을 다이어그램으로 표현한다면 아래와 같다.\n",
         "\n",
@@ -855,7 +855,7 @@
         "\n",
         "아래의 아키텍처를 가지는 네트워크를 파이토치코드로 선언하라.\n",
         "\n",
-        "<figure class=\"margin-caption\">\n",
+        "<figure>\n",
         "<img\n",
         "src=\"https://d2908q01vomqb2.cloudfront.net/f1f836cb4ea6efb2a0b1b99f41ad8b103eff4b59/2017/10/06/intro-gluon-1.gif\"\n",
         "alt=\"출처: https://aws.amazon.com/ko/what-is/deep-learning/\" />\n",
@@ -864,7 +864,7 @@
         "class=\"uri\">https://aws.amazon.com/ko/what-is/deep-learning/</a></figcaption>\n",
         "</figure>"
       ],
-      "id": "267bb31f-45e7-43b7-a9fb-d714a4bdda37"
+      "id": "8d35716a-0524-4039-8e8f-2edc448de9df"
     },
     {
       "cell_type": "code",
@@ -897,7 +897,7 @@
         "and the Theory of Brain Mechanisms*. Vol. 55. Spartan books Washington,\n",
         "DC."
       ],
-      "id": "7c136fdf-e5d2-40c3-862d-acb4b051b461"
+      "id": "1553befd-eb9c-45e1-9b16-4a1c991b9a1d"
     }
   ],
   "nbformat": 4,
