--- a/docs/posts/10wk-2.out.ipynb
+++ b/docs/posts/10wk-2.out.ipynb
@@ -17,7 +17,7 @@
         "\n",
         "# 2. Imports"
       ],
-      "id": "28d73abe-532c-439a-a741-d153418a54b0"
+      "id": "9644904d-2c18-4904-9b58-83a80e05f2b3"
     },
     {
       "cell_type": "code",
@@ -41,7 +41,7 @@
         "\n",
         "`-` 주어진 자료가 아래와 같다고 하자."
       ],
-      "id": "70f584f6-afaa-4204-92da-eb3d8881ce24"
+      "id": "b6d6110b-df13-43f2-a51b-b1831a7ed6bd"
     },
     {
       "cell_type": "code",
@@ -87,7 +87,7 @@
       "source": [
         "`-` 문제1: 아래와 같이 최초의 직선을 생성하였다."
       ],
-      "id": "4416cf5e-f921-4b47-8527-136da3af86cd"
+      "id": "ec18d51a-47af-4862-9185-9afac203b039"
     },
     {
       "cell_type": "code",
@@ -129,7 +129,7 @@
         "`torch.optim.SGD`를 이용하여 What을 update하라. 학습률은 0.1로 설정하고\n",
         "30회 update하라."
       ],
-      "id": "b918948a-a0b4-46fe-bb17-5adbdbaa1625"
+      "id": "3c33cda9-147e-4597-ba2d-211a6740e594"
     },
     {
       "cell_type": "code",
@@ -183,7 +183,7 @@
       "source": [
         "`-` 문제2: 아래와 같이 최초의 직선을 생성하였다."
       ],
-      "id": "27263563-dc35-49e0-bcf4-6718e18e027b"
+      "id": "e52b87f1-bf5f-45e0-b443-ff490f3a5eb9"
     },
     {
       "cell_type": "code",
@@ -226,7 +226,7 @@
         "`torch.optim.SGD`를 이용하여 What을 update하라. 학습률은 0.1로 설정하고\n",
         "30회 update하라."
       ],
-      "id": "b00ebc3b-b8d8-452e-88cb-887c9f2f5154"
+      "id": "4d73819b-710f-4a75-a463-4e12d81222ec"
     },
     {
       "cell_type": "code",
@@ -286,7 +286,7 @@
         "\n",
         "`-` Data"
       ],
-      "id": "9aed7657-68cc-4ae0-ad62-7bc810f782b4"
+      "id": "0e159354-f459-4121-825d-71f167088690"
     },
     {
       "cell_type": "code",
@@ -339,7 +339,7 @@
         "옥순의I성향$\\times$영식의I성향 $+$ 옥순의N성향$\\times$영식의N성향 $+$\n",
         "옥순의매력 $+$ 영식의매력"
       ],
-      "id": "ce539101-08c2-4181-940a-f19919a0ba26"
+      "id": "38e089ce-a23a-4198-b323-140b67f11dc6"
     },
     {
       "cell_type": "code",
@@ -365,7 +365,7 @@
         "**(2)** 영자(IN)와 다호(ES)의 궁합 $\\approx$ 영자I성향$\\times$다호I성향\n",
         "$+$ 영자N성향$\\times$다호의N성향 $+$ 영자의매력 $+$ 다호의매력"
       ],
-      "id": "d8a27406-0a85-4385-8652-c156b6403933"
+      "id": "1910aeab-afe1-4fb1-b875-0742dcf1b5e6"
     },
     {
       "cell_type": "code",
@@ -391,7 +391,7 @@
         "**(3)** 하니(I)와 영호(IS)의 궁합 $\\approx$ 하니I성향$\\times$영호I성향\n",
         "$+$ 하니N성향$\\times$영호의N성향 $+$ 하니의매력 $+$ 영호의매력"
       ],
-      "id": "982d70d1-6365-4fd7-bcd0-96c60c6ba06c"
+      "id": "d2fff7d3-504e-4114-8d4f-6c2bf9eb29b3"
     },
     {
       "cell_type": "code",
@@ -418,7 +418,7 @@
         "\n",
         "`-` 전체 사용자의 설정값"
       ],
-      "id": "dc32e007-fba4-442d-aff8-ae6fb908bb99"
+      "id": "c71cdf3b-1715-492e-bf4a-ebd7f5ae4fe0"
     },
     {
       "cell_type": "code",
@@ -471,7 +471,7 @@
       "source": [
         "`-` 아래의 행렬곱 관찰"
       ],
-      "id": "af191e14-863f-4427-a190-99ee2f2e15c7"
+      "id": "115d6d68-4803-49ae-a914-d155f281c218"
     },
     {
       "cell_type": "code",
@@ -491,71 +491,15 @@
       "source": [
         "—저거 따져보자—\n",
         "\n",
-        "${\\bf W} = \\begin{bmatrix}\n",
-        "1.2200 & 0.4900 \\\\\n",
-        "1.1700 & 0.4400 \\\\\n",
-        "1.2100 & -0.4500 \\\\\n",
-        "1.2000 & -0.5000 \\\\\n",
-        "-1.2000 & 0.5100 \\\\\n",
-        "-1.2300 & 0.4800 \\\\\n",
-        "-1.2000 & -0.4800 \\\\\n",
-        "-1.1900 & -0.4900 \\\\\n",
-        "0.2000 & 0.0000\n",
-        "\\end{bmatrix}$\n",
+        "${\\bf W} = \\begin{bmatrix} 1.2200 & 0.4900 \\\\ 1.1700 & 0.4400 \\\\ 1.2100 & -0.4500 \\\\ 1.2000 & -0.5000 \\\\ -1.2000 & 0.5100 \\\\ -1.2300 & 0.4800 \\\\ -1.2000 & -0.4800 \\\\ -1.1900 & -0.4900 \\\\ 0.2000 & 0.0000 \\end{bmatrix}$\n",
         "\n",
-        "${\\bf M}^\\top = \\begin{bmatrix}\n",
-        "1.2000 & 1.2200 & 1.2300 & 1.2100 & -1.2800 & -1.2400 & -1.2000 & -1.2200 \\\\\n",
-        "0.5000 & 0.4500 & -0.7000 & -0.6000 & 0.6000 & 0.5000 & -0.5000 & -0.6000\n",
-        "\\end{bmatrix}$\n",
+        "${\\bf M}^\\top = \\begin{bmatrix} 1.2000 & 1.2200 & 1.2300 & 1.2100 & -1.2800 & -1.2400 & -1.2000 & -1.2200 \\\\ 0.5000 & 0.4500 & -0.7000 & -0.6000 & 0.6000 & 0.5000 & -0.5000 & -0.6000 \\end{bmatrix}$\n",
         "\n",
-        "${\\bf W} @ {\\bf M}^\\top = \\begin{bmatrix}\n",
-        "1.7090 & 1.7089 & 1.1576 & 1.1822 & -1.2676 & -1.2678 & -1.7090 & -1.7824 \\\\\n",
-        "1.6240 & 1.6254 & 1.1311 & 1.1517 & -1.2336 & -1.2308 & -1.6240 & -1.6914 \\\\\n",
-        "1.2270 & 1.2737 & 1.8033 & 1.7341 & -1.8188 & -1.7254 & -1.2270 & -1.2062 \\\\\n",
-        "1.1900 & 1.2390 & 1.8260 & 1.7520 & -1.8360 & -1.7380 & -1.1900 & -1.1640 \\\\\n",
-        "-1.1850 & -1.2345 & -1.8330 & -1.7580 &  1.8420 &  1.7430 &  1.1850 &  1.1580 \\\\\n",
-        "-1.2360 & -1.2846 & -1.8489 & -1.7763 &  1.8624 &  1.7652 &  1.2360 &  1.2126 \\\\\n",
-        "-1.6800 & -1.6800 & -1.1400 & -1.1640 &  1.2480 &  1.2480 &  1.6800 &  1.7520 \\\\\n",
-        "-1.6730 & -1.6723 & -1.1207 & -1.1459 &  1.2292 &  1.2306 &  1.6730 &  1.7458 \\\\\n",
-        "0.2400 &  0.2440 &  0.2460 &  0.2420 & -0.2560 & -0.2480 & -0.2400 & -0.2440\n",
-        "\\end{bmatrix}$\n",
+        "${\\bf W} @ {\\bf M}^\\top = \\begin{bmatrix} 1.7090 & 1.7089 & 1.1576 & 1.1822 & -1.2676 & -1.2678 & -1.7090 & -1.7824 \\\\ 1.6240 & 1.6254 & 1.1311 & 1.1517 & -1.2336 & -1.2308 & -1.6240 & -1.6914 \\\\ 1.2270 & 1.2737 & 1.8033 & 1.7341 & -1.8188 & -1.7254 & -1.2270 & -1.2062 \\\\ 1.1900 & 1.2390 & 1.8260 & 1.7520 & -1.8360 & -1.7380 & -1.1900 & -1.1640 \\\\ -1.1850 & -1.2345 & -1.8330 & -1.7580 & 1.8420 & 1.7430 & 1.1850 & 1.1580 \\\\ -1.2360 & -1.2846 & -1.8489 & -1.7763 & 1.8624 & 1.7652 & 1.2360 & 1.2126 \\\\ -1.6800 & -1.6800 & -1.1400 & -1.1640 & 1.2480 & 1.2480 & 1.6800 & 1.7520 \\\\ -1.6730 & -1.6723 & -1.1207 & -1.1459 & 1.2292 & 1.2306 & 1.6730 & 1.7458 \\\\ 0.2400 & 0.2440 & 0.2460 & 0.2420 & -0.2560 & -0.2480 & -0.2400 & -0.2440 \\end{bmatrix}$\n",
         "\n",
-        "$\\begin{align*} bias =~& \\begin{bmatrix}\n",
-        "1.2100 \\\\\n",
-        "1.2500 \\\\\n",
-        "1.1000 \\\\\n",
-        "1.1100 \\\\\n",
-        "1.1200 \\\\\n",
-        "1.1300 \\\\\n",
-        "1.1400 \\\\\n",
-        "1.1200 \\\\\n",
-        "3.6000\n",
-        "\\end{bmatrix} +\\begin{bmatrix}\n",
-        "1.2000 & 1.1000 & 1.1100 & 1.2500 & 1.1800 & 1.1100 & 1.1500 & 1.1500\n",
-        "\\end{bmatrix}\\\\ \\\\\n",
-        "=~& \\begin{bmatrix}\n",
-        "2.4100 & 2.3100 & 2.3200 & 2.4600 & 2.3900 & 2.3200 & 2.3600 & 2.3600 \\\\\n",
-        "2.4500 & 2.3500 & 2.3600 & 2.5000 & 2.4300 & 2.3600 & 2.4000 & 2.4000 \\\\\n",
-        "2.3000 & 2.2000 & 2.2100 & 2.3500 & 2.2800 & 2.2100 & 2.2500 & 2.2500 \\\\\n",
-        "2.3100 & 2.2100 & 2.2200 & 2.3600 & 2.2900 & 2.2200 & 2.2600 & 2.2600 \\\\\n",
-        "2.3200 & 2.2200 & 2.2300 & 2.3700 & 2.3000 & 2.2300 & 2.2700 & 2.2700 \\\\\n",
-        "2.3300 & 2.2300 & 2.2400 & 2.3800 & 2.3100 & 2.2400 & 2.2800 & 2.2800 \\\\\n",
-        "2.3400 & 2.2400 & 2.2500 & 2.3900 & 2.3200 & 2.2500 & 2.2900 & 2.2900 \\\\\n",
-        "2.3200 & 2.2200 & 2.2300 & 2.3700 & 2.3000 & 2.2300 & 2.2700 & 2.2700 \\\\\n",
-        "4.8000 & 4.7000 & 4.7100 & 4.8500 & 4.7800 & 4.7100 & 4.7500 & 4.7500\n",
-        "\\end{bmatrix} \\end{align*}$\n",
+        "$\\begin{align*} bias =~& \\begin{bmatrix} 1.2100 \\\\ 1.2500 \\\\ 1.1000 \\\\ 1.1100 \\\\ 1.1200 \\\\ 1.1300 \\\\ 1.1400 \\\\ 1.1200 \\\\ 3.6000 \\end{bmatrix} +\\begin{bmatrix} 1.2000 & 1.1000 & 1.1100 & 1.2500 & 1.1800 & 1.1100 & 1.1500 & 1.1500 \\end{bmatrix}\\\\ \\\\ =~& \\begin{bmatrix} 2.4100 & 2.3100 & 2.3200 & 2.4600 & 2.3900 & 2.3200 & 2.3600 & 2.3600 \\\\ 2.4500 & 2.3500 & 2.3600 & 2.5000 & 2.4300 & 2.3600 & 2.4000 & 2.4000 \\\\ 2.3000 & 2.2000 & 2.2100 & 2.3500 & 2.2800 & 2.2100 & 2.2500 & 2.2500 \\\\ 2.3100 & 2.2100 & 2.2200 & 2.3600 & 2.2900 & 2.2200 & 2.2600 & 2.2600 \\\\ 2.3200 & 2.2200 & 2.2300 & 2.3700 & 2.3000 & 2.2300 & 2.2700 & 2.2700 \\\\ 2.3300 & 2.2300 & 2.2400 & 2.3800 & 2.3100 & 2.2400 & 2.2800 & 2.2800 \\\\ 2.3400 & 2.2400 & 2.2500 & 2.3900 & 2.3200 & 2.2500 & 2.2900 & 2.2900 \\\\ 2.3200 & 2.2200 & 2.2300 & 2.3700 & 2.3000 & 2.2300 & 2.2700 & 2.2700 \\\\ 4.8000 & 4.7000 & 4.7100 & 4.8500 & 4.7800 & 4.7100 & 4.7500 & 4.7500 \\end{bmatrix} \\end{align*}$\n",
         "\n",
-        "${\\bf W} @ {\\bf M}^\\top + bias = \\begin{bmatrix}\n",
-        "4.1190 & 4.0189 & 3.4776 & 3.6422 & 1.1224 & 1.0522 & 0.6510 & 0.5776 \\\\\n",
-        "4.0740 & 3.9754 & 3.4911 & 3.6517 & 1.1964 & 1.1292 & 0.7760 & 0.7086 \\\\\n",
-        "3.5270 & 3.4737 & 4.0133 & 4.0841 & 0.4612 & 0.4846 & 1.0230 & 1.0438 \\\\\n",
-        "3.5000 & 3.4490 & 4.0460 & 4.1120 & 0.4540 & 0.4820 & 1.0700 & 1.0960 \\\\\n",
-        "1.1350 & 0.9855 & 0.3970 & 0.6120 & 4.1420 & 3.9730 & 3.4550 & 3.4280 \\\\\n",
-        "1.0940 & 0.9454 & 0.3911 & 0.6037 & 4.1724 & 4.0052 & 3.5160 & 3.4926 \\\\\n",
-        "0.6600 & 0.5600 & 1.1100 & 1.2260 & 3.5680 & 3.4980 & 3.9700 & 4.0420 \\\\\n",
-        "0.6470 & 0.5477 & 1.1093 & 1.2241 & 3.5292 & 3.4606 & 3.9430 & 4.0158 \\\\\n",
-        "5.0400 & 4.9440 & 4.9560 & 5.0920 & 4.5240 & 4.4620 & 4.5100 & 4.5060\n",
-        "\\end{bmatrix}$\n",
+        "${\\bf W} @ {\\bf M}^\\top + bias = \\begin{bmatrix} 4.1190 & 4.0189 & 3.4776 & 3.6422 & 1.1224 & 1.0522 & 0.6510 & 0.5776 \\\\ 4.0740 & 3.9754 & 3.4911 & 3.6517 & 1.1964 & 1.1292 & 0.7760 & 0.7086 \\\\ 3.5270 & 3.4737 & 4.0133 & 4.0841 & 0.4612 & 0.4846 & 1.0230 & 1.0438 \\\\ 3.5000 & 3.4490 & 4.0460 & 4.1120 & 0.4540 & 0.4820 & 1.0700 & 1.0960 \\\\ 1.1350 & 0.9855 & 0.3970 & 0.6120 & 4.1420 & 3.9730 & 3.4550 & 3.4280 \\\\ 1.0940 & 0.9454 & 0.3911 & 0.6037 & 4.1724 & 4.0052 & 3.5160 & 3.4926 \\\\ 0.6600 & 0.5600 & 1.1100 & 1.2260 & 3.5680 & 3.4980 & 3.9700 & 4.0420 \\\\ 0.6470 & 0.5477 & 1.1093 & 1.2241 & 3.5292 & 3.4606 & 3.9430 & 4.0158 \\\\ 5.0400 & 4.9440 & 4.9560 & 5.0920 & 4.5240 & 4.4620 & 4.5100 & 4.5060 \\end{bmatrix}$\n",
         "\n",
         "`-` ${\\bf W} @ {\\bf M}^\\top + bias$ 의 (1,1)의 원소값을 계산해보면\n",
         "아래와 같다.\n",
@@ -572,7 +516,7 @@
         "\n",
         "`-` 주어진 자료와 우리가 임의로 만든 궁합매트릭스를 비교해보자."
       ],
-      "id": "5be3e79a-d387-4090-9c56-aac1788a793f"
+      "id": "329c32f9-61f8-4aa2-887e-56541946f088"
     },
     {
       "cell_type": "code",
@@ -692,7 +636,7 @@
         "\n",
         "[6] 1.21+1.11 = 2.32"
       ],
-      "id": "d3e6604a-46be-4350-8256-6a1b54ceedb5"
+      "id": "096b0c19-e9ff-4264-a5aa-f1a9d77e535f"
     },
     {
       "cell_type": "code",
@@ -713,7 +657,7 @@
       "source": [
         "`-` 이름을 숫자화"
       ],
-      "id": "dea4a485-4c16-42cd-a58f-355b526667ce"
+      "id": "d97d1ac4-9dfd-49a1-b44a-cc8b09136e73"
     },
     {
       "cell_type": "code",
@@ -748,7 +692,7 @@
       "source": [
         "`-` 텐서화 + one_hot-인코딩"
       ],
-      "id": "f5646ab4-7c87-4456-a30a-902b32897aae"
+      "id": "61a1467e-b350-4691-9927-a04d14e72e1c"
     },
     {
       "cell_type": "code",
@@ -800,7 +744,7 @@
         "`-` `X1` -\\> `여성특징`, `X1` -\\> `여성bias`, `X2` -\\> `남성특징`, `X2`\n",
         "-\\> `남성bias` 구현"
       ],
-      "id": "7668dd0b-db71-47c8-873c-95f4a063f84a"
+      "id": "9ce1f02f-2eb2-41b0-9fbd-34a788200ee2"
     },
     {
       "cell_type": "code",
@@ -825,7 +769,7 @@
         "\n",
         "`-` step1: yhat을 구하자."
       ],
-      "id": "95a2c131-d403-45c4-95f8-d0969ec82cd3"
+      "id": "aeb57d0c-b8c6-4c28-92db-854c13b9e9c6"
     },
     {
       "cell_type": "code",
@@ -867,7 +811,7 @@
       "source": [
         "`-` step2: 손실계산"
       ],
-      "id": "40fbcc10-bdfb-4c73-a90d-3e02a9fae8a9"
+      "id": "dc569123-e86f-426c-88e0-6dbb3b894259"
     },
     {
       "cell_type": "code",
@@ -890,7 +834,7 @@
         "\n",
         "(미분전)"
       ],
-      "id": "6bfbee84-52bb-4767-a419-30297501b62a"
+      "id": "46cbc8e4-cac9-41ba-8de5-61088e1c5f75"
     },
     {
       "cell_type": "code",
@@ -922,7 +866,7 @@
       "source": [
         "(미분)"
       ],
-      "id": "660b91de-09a4-40eb-94ec-73f9414b566a"
+      "id": "c997e1d2-58e3-4372-b7f5-397d27f9c6aa"
     },
     {
       "cell_type": "code",
@@ -942,7 +886,7 @@
       "source": [
         "(미분후)"
       ],
-      "id": "fc675859-11cc-41c6-92d1-b114b0fe10ef"
+      "id": "2bc1b31c-258d-4e65-95b6-261895533036"
     },
     {
       "cell_type": "code",
@@ -976,7 +920,7 @@
         "\n",
         "(옵티마이저 선언)"
       ],
-      "id": "9719df5a-f8bd-4e2c-9c66-5feda620c66a"
+      "id": "55957baf-d3ca-4ea0-81f3-d82e14e2907c"
     },
     {
       "cell_type": "code",
@@ -997,7 +941,7 @@
       "source": [
         "(update전)"
       ],
-      "id": "809e98f6-2f1f-4fba-b7d2-c27f4b31ea6e"
+      "id": "ae19057b-7b67-4794-87ce-a6c9d4660311"
     },
     {
       "cell_type": "code",
@@ -1029,7 +973,7 @@
       "source": [
         "(update)"
       ],
-      "id": "fa94e3a9-d907-4f61-9c6a-61638160f9e8"
+      "id": "9557c58b-29c3-4089-b74e-afbf6f36f059"
     },
     {
       "cell_type": "code",
@@ -1049,7 +993,7 @@
       "source": [
         "(update후)"
       ],
-      "id": "a8eed150-ab24-4a63-8c5a-e4da763e4e39"
+      "id": "08f0f14a-5983-45eb-8e91-6a5fa688fa0d"
     },
     {
       "cell_type": "code",
@@ -1081,7 +1025,7 @@
       "source": [
         "(zero_grad)"
       ],
-      "id": "f12f6385-cacd-4908-b0d0-db4f4910c3ed"
+      "id": "5db856b2-bacc-423f-a151-8a08eef95cc7"
     },
     {
       "cell_type": "code",
@@ -1101,7 +1045,7 @@
       "source": [
         "(zero_grad후)"
       ],
-      "id": "0c0e0d23-7c7a-4177-bfae-46c9c96e8087"
+      "id": "1c7c8595-a87f-4a4a-92b0-3cd6da66bad9"
     },
     {
       "cell_type": "code",
@@ -1133,7 +1077,7 @@
       "source": [
         "## E. 코드정리"
       ],
-      "id": "87c812dd-d68e-4d47-a13a-d10404c1e692"
+      "id": "ef58be66-16d4-466a-ad5a-7211a4b31fcd"
     },
     {
       "cell_type": "code",
@@ -1199,7 +1143,7 @@
       "source": [
         "## F. 모형의 해석 – 쉬운경우"
       ],
-      "id": "b6880f21-322c-4f6f-97c9-eadf8974e01c"
+      "id": "9a357e1d-f0e5-48f4-8d4f-d67a7be0d422"
     },
     {
       "cell_type": "code",
@@ -1236,7 +1180,7 @@
         "\n",
         "`-` 적합을 시켜보자."
       ],
-      "id": "ef64fb15-c576-4e1e-9997-a6f955aaac15"
+      "id": "85de1958-3556-46c4-908f-3405b61a22f1"
     },
     {
       "cell_type": "code",
@@ -1290,7 +1234,7 @@
       "source": [
         "`-` 잘 맞추는듯"
       ],
-      "id": "f221889d-079d-42a5-bffe-a48e1a6c510f"
+      "id": "2bc5e310-d0b8-479b-b131-42619c13cd90"
     },
     {
       "cell_type": "code",
@@ -1310,7 +1254,7 @@
       "source": [
         "`-` 해석을 해보자."
       ],
-      "id": "185c9661-02cb-40b7-85f5-9f17bbc55d58"
+      "id": "392975c9-27a2-4a0d-974d-60d98f3a178a"
     },
     {
       "cell_type": "code",
@@ -1350,7 +1294,7 @@
         "-   궁합2: (IN, IN) = 1.4 // (IN, IS) = 0.4 // (IN, EN) = -0.4 // (IN,\n",
         "    ES) = -1.4"
       ],
-      "id": "8ff51654-b7b1-4e7d-b522-46737912bf09"
+      "id": "0e0a6e79-ea3b-4f3d-849b-94a6c46dcd91"
     },
     {
       "cell_type": "code",
@@ -1374,7 +1318,7 @@
         "\n",
         "아래의 코드를 활용하여 net를 적합시켜라."
       ],
-      "id": "5dc96fea-5397-444c-81a7-2919dea76eca"
+      "id": "c46664fc-7be5-482c-b10d-42322a0c01d6"
     },
     {
       "cell_type": "code",
@@ -1428,7 +1372,7 @@
       "source": [
         "적합된 네트워크를 바탕으로 아래의 값에 대한 예측을 수행하라."
       ],
-      "id": "a9c70e0d-c940-4137-b1cd-efa0919609be"
+      "id": "3bbafb2f-4c67-48ed-967b-a9eace81a499"
     },
     {
       "cell_type": "code",
@@ -1449,7 +1393,7 @@
       "source": [
         "**hint** 답은 아래와 같다."
       ],
-      "id": "91521a92-31b2-48a9-b9f2-5503650a8a4d"
+      "id": "b401a98c-e59a-45df-ae88-a69459aadd11"
     },
     {
       "cell_type": "code",
