--- a/docs/posts/13wk-2.out.ipynb
+++ b/docs/posts/13wk-2.out.ipynb
@@ -11,29 +11,13 @@
         "\n",
         "<a href=\"https://colab.research.google.com/github/guebin/DL2024/blob/main/posts/13wk-2.ipynb\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" style=\"text-align: left\"></a>\n",
         "\n",
-        "# 1. 강의영상"
-      ],
-      "id": "762965bf-36b5-4cba-b397-840a62b0485b"
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 1,
-      "metadata": {
-        "tags": []
-      },
-      "outputs": [],
-      "source": [
-        "#{{<video https://youtu.be/playlist?list=PLQqh36zP38-zoOHd7w3N5q9Jc5P34Ux8X&si=MdJTHM3a27MCAssp >}}"
-      ],
-      "id": "4685c071-46e9-4bcb-84a7-ece876eb4654"
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
+        "# 1. 강의영상\n",
+        "\n",
+        "<https://youtu.be/playlist?list=PLQqh36zP38-zEjn2m8H8hMCHsQK8udE27&si=Sy-lnw4Kq56SRggu>\n",
+        "\n",
         "# 2. Imports"
       ],
-      "id": "f577e191-a6bc-4cbb-a5e4-e0eb9c97233e"
+      "id": "bc3ed4b2-6a4b-4e58-a100-2eca0ae898ce"
     },
     {
       "cell_type": "code",
@@ -76,7 +60,7 @@
         "\n",
         "`-` 버튼을 아무거나 누르는 코드를 작성해보자."
       ],
-      "id": "fd2b3703-28c5-4ff4-b744-845b76fc7f0a"
+      "id": "d6ae1d33-5cf3-4522-a06e-19be969e5be5"
     },
     {
       "cell_type": "code",
@@ -98,7 +82,7 @@
         "\n",
         "`-` 버튼을 누른 행위에 따른 보상을 구현하자."
       ],
-      "id": "883cda61-5b3e-4cfa-9073-95d155d90523"
+      "id": "a4fcd928-4c27-465e-87a0-484181bdb8ad"
     },
     {
       "cell_type": "code",
@@ -119,7 +103,7 @@
         "\n",
         "`-` 아무버튼이나 10번정도 눌러보면서 데이터를 쌓아보자."
       ],
-      "id": "6e829788-1522-4adb-81e8-fd440d8081a1"
+      "id": "917b8647-299a-42de-b7bc-4cc836706a91"
     },
     {
       "cell_type": "code",
@@ -164,7 +148,7 @@
         "\n",
         "> `environment`라는 용어를 기억할 것"
       ],
-      "id": "860c77e3-b9a8-486a-a0d7-c297558c6e59"
+      "id": "7514eb4e-4b4b-47b2-b36d-9d3f11526e6c"
     },
     {
       "cell_type": "code",
@@ -227,7 +211,7 @@
         "\n",
         "[1] `버튼1`을 눌러야 하는건 맞지만 몇번의 실수는 눈감아 주자는 의미"
       ],
-      "id": "d86166aa-566f-42de-88c4-47b4e8558d4a"
+      "id": "aa51155b-5d81-4471-b8f7-6b433c523a27"
     },
     {
       "cell_type": "code",
@@ -325,7 +309,7 @@
       "source": [
         "`-` 원시코드2: 환경을 깨달은 에이전트 – 게임클리어"
       ],
-      "id": "f508750a-edd1-4a15-a36d-d94a761e33f8"
+      "id": "5e604b0e-fbb4-464a-af54-05c78a979fd3"
     },
     {
       "cell_type": "code",
@@ -397,7 +381,7 @@
         "\n",
         "`-` `Bandit` 클래스 선언 + `.step()` 구현"
       ],
-      "id": "b31ee49e-5d49-45fc-b692-da0714d2eb73"
+      "id": "d4204c27-c45b-4b27-9afc-b5a62f0dd8b1"
     },
     {
       "cell_type": "code",
@@ -514,7 +498,7 @@
         "-   액션을 하고, 본인의 행동과 환경에서 받은 reward를 기억\n",
         "-   `.act()`함수와 `.save_experience()`함수 구현"
       ],
-      "id": "adf75ff3-5e53-4468-bd34-28b2045d9b3e"
+      "id": "aabb652f-142d-41ad-9be9-cfd44a3a680c"
     },
     {
       "cell_type": "code",
@@ -546,7 +530,7 @@
         "\n",
         "**시점0**: init"
       ],
-      "id": "eaf5115c-04f5-4abb-b914-6c9d2e926255"
+      "id": "7a055307-431c-4df8-aaa4-fcb0e10fee2f"
     },
     {
       "cell_type": "code",
@@ -575,7 +559,7 @@
       "source": [
         "**시점1**: agent 가 acition을 선택"
       ],
-      "id": "803dfb27-098d-46a7-9d44-581f9a9ca1e2"
+      "id": "0ba365c3-176c-499f-9748-32be52d84b1f"
     },
     {
       "cell_type": "code",
@@ -603,7 +587,7 @@
       "source": [
         "**시점2**: env가 agent에게 보상을 줌"
       ],
-      "id": "9b94549c-7fe1-4a6b-9900-a3e0ef66ca81"
+      "id": "760b9839-c783-402c-93d0-5488f3f21758"
     },
     {
       "cell_type": "code",
@@ -631,7 +615,7 @@
       "source": [
         "**시점3**: 경험을 저장"
       ],
-      "id": "e1368231-cd18-4927-8bd2-9d75dc525fe7"
+      "id": "ae1f8e6e-f4e6-4b2f-8211-39da68d6347e"
     },
     {
       "cell_type": "code",
@@ -659,7 +643,7 @@
       "source": [
         "– 전체코드 –"
       ],
-      "id": "3e3af66a-18a6-4a89-abcb-77ba22d5747a"
+      "id": "2bd0502a-a591-4b26-9e9b-b779a3fec27c"
     },
     {
       "cell_type": "code",
@@ -761,7 +745,7 @@
         "\n",
         "[1] `버튼1`을 누른다"
       ],
-      "id": "1f317d30-f808-47d5-9528-57accfa3c9fc"
+      "id": "b85b6435-ed4e-4292-8e69-e659162b7516"
     },
     {
       "cell_type": "code",
@@ -827,7 +811,7 @@
       "source": [
         "`-` 최종코드정리"
       ],
-      "id": "0b564e22-508d-4716-8fad-e6c186995f31"
+      "id": "bc641744-ae51-4bb9-a126-86bf5e85d847"
     },
     {
       "cell_type": "code",
@@ -966,7 +950,7 @@
       "mimetype": "text/x-python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.10.13"
+      "version": "3.11.8"
     }
   }
 }
