--- a/docs/posts/03wk-2.out.ipynb
+++ b/docs/posts/03wk-2.out.ipynb
@@ -17,7 +17,7 @@
         "\n",
         "# 2. Imports"
       ],
-      "id": "5ea0ef1e-8022-45df-926f-daa578763f8e"
+      "id": "380d871e-7032-4a62-bcba-a3c1c64a33ba"
     },
     {
       "cell_type": "code",
@@ -44,7 +44,7 @@
         "\n",
         "`-` 아래와 같은 벡터 ${\\boldsymbol x}$를 가정하자."
       ],
-      "id": "34764a80-e786-40fa-b560-7682ac2d1a99"
+      "id": "4a669dce-fce1-4779-8e07-60f48944826d"
     },
     {
       "cell_type": "code",
@@ -69,7 +69,7 @@
         "\n",
         "## A. 방법1"
       ],
-      "id": "6da7aea1-89ba-45ff-83ed-e2541618dbe8"
+      "id": "df59a442-9d19-44e3-b146-c56b6786bb6c"
     },
     {
       "cell_type": "code",
@@ -140,7 +140,7 @@
         "\n",
         "## B. 방법2 – 렐루이용"
       ],
-      "id": "d3ed77c3-8428-4736-8efb-f1b23c4eee9e"
+      "id": "b1f56fd1-1391-4c49-91d6-76c1d11f34b1"
     },
     {
       "cell_type": "code",
@@ -227,7 +227,7 @@
       "source": [
         "`-` 우리의 목표: 저 초록선에서 시그모이드를 태우면된다. 즉 아래의 느낌임"
       ],
-      "id": "0a24fdbf-8cb8-4a3a-8aa8-2d1dc696280b"
+      "id": "1f5d7543-719c-4e6b-90de-fc559328d92b"
     },
     {
       "cell_type": "code",
@@ -291,7 +291,7 @@
         "\n",
         "`-` 1단계"
       ],
-      "id": "3109d5ca-dfcd-4cce-8e35-13b5f3219138"
+      "id": "d939e4b8-b68e-446f-9f31-96618c6f0a16"
     },
     {
       "cell_type": "code",
@@ -311,7 +311,7 @@
       "source": [
         "`-` 2단계"
       ],
-      "id": "b28fad1b-8249-40cc-98d8-b08ddb674836"
+      "id": "786d45db-2406-41da-ab54-5e89929e5e6f"
     },
     {
       "cell_type": "code",
@@ -332,7 +332,7 @@
       "source": [
         "`-` 3단계"
       ],
-      "id": "ecb65292-42bb-4a24-ba9f-04fc78d2b07e"
+      "id": "897d3121-91bb-4b97-8443-1a076b6cabb7"
     },
     {
       "cell_type": "code",
@@ -353,7 +353,7 @@
       "source": [
         "`-` 4단계"
       ],
-      "id": "4cbfcb25-f1f8-4a68-90d7-25f632572354"
+      "id": "5e2aef97-2ac5-4286-a68c-7f486b52e512"
     },
     {
       "cell_type": "code",
@@ -385,22 +385,11 @@
       "source": [
         "`-` 그런데, 4단계는 아래와 같이 볼 수 있다.\n",
         "\n",
-        "-   ${\\boldsymbol v}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 = \\begin{bmatrix}\n",
-        "    v_{11} & v_{12}  \\\\\n",
-        "    v_{21} & v_{22}  \\\\\n",
-        "    \\dots & \\dots  \\\\\n",
-        "    v_{n1} & v_{n2}  \\\\\n",
-        "    \\end{bmatrix}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 =\n",
-        "    \\begin{bmatrix}\n",
-        "    -4.5 v_{11} - 9.0 v_{12} + 4.5  \\\\\n",
-        "    -4.5 v_{21} - 9.0 v_{22} + 4.5  \\\\\n",
-        "    \\dots \\\\\n",
-        "    -4.5 v_{n1} - 9.0 v_{n2} + 4.5 \\\\\n",
-        "    \\end{bmatrix}$\n",
+        "-   ${\\boldsymbol v}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 = \\begin{bmatrix} v_{11} & v_{12} \\\\ v_{21} & v_{22} \\\\ \\dots & \\dots \\\\ v_{n1} & v_{n2} \\\\ \\end{bmatrix}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 = \\begin{bmatrix} -4.5 v_{11} - 9.0 v_{12} + 4.5 \\\\ -4.5 v_{21} - 9.0 v_{22} + 4.5 \\\\ \\dots \\\\ -4.5 v_{n1} - 9.0 v_{n2} + 4.5 \\\\ \\end{bmatrix}$\n",
         "\n",
         "위의 수식을 참고하여 매트릭스의 곱 형태로 다시 포현하면 아래와 같다."
       ],
-      "id": "88a9fd93-0ed6-4cf3-867f-d25690da505f"
+      "id": "4375343d-2935-49b2-af71-91ea9c9bfd87"
     },
     {
       "cell_type": "code",
@@ -423,7 +412,7 @@
         "이제 매트릭스의 곱 대신에 `torch.nn.Linear()`를 이용하면 아래의 코드와\n",
         "같아진다."
       ],
-      "id": "98180f6b-ee91-4749-82f0-e7f6e06cdf87"
+      "id": "5f95f439-66fc-4b22-a0f2-988e38d0ae4b"
     },
     {
       "cell_type": "code",
@@ -478,7 +467,7 @@
         "x_n \n",
         "\\end{bmatrix}\\begin{bmatrix} 1 & -1 \\end{bmatrix} = \\begin{bmatrix} x_1 & -x_1 \\\\ x_2 & -x_2 \\\\ \\dots & \\dots \\\\ x_n & -x_n \\end{bmatrix}$$"
       ],
-      "id": "d9e879af-179b-45c5-be9a-fbb49b9e6e41"
+      "id": "37f0b701-a2d8-4fa3-a139-5c12bda6168a"
     },
     {
       "cell_type": "code",
@@ -525,7 +514,7 @@
         "`-` 따라서 `torch.nn` 에 포함된 레이어를 이용하면 아래와 같이 표현할 할\n",
         "수 있다."
       ],
-      "id": "0ad4fbd6-76b5-44aa-8a98-245d50a5297d"
+      "id": "8f946a57-2bc8-4244-92a4-11768198ae21"
     },
     {
       "cell_type": "code",
@@ -564,7 +553,7 @@
         "`-` 각각의 layer를 `torch.nn.Sequential()` 로 묶으면 아래와 같이 정리할\n",
         "수 있다."
       ],
-      "id": "a5c5210c-cd41-499d-a7fa-a1c65414cd24"
+      "id": "2c6901d7-0e63-43db-964e-ade2be1a6078"
     },
     {
       "cell_type": "code",
@@ -633,7 +622,7 @@
         "\n",
         "## A. 데이터"
       ],
-      "id": "a59ccd73-bb90-4701-ba3d-a3b3b9a6af63"
+      "id": "38c0383f-a626-40d2-8f69-3b8a3b84c76f"
     },
     {
       "cell_type": "code",
@@ -698,7 +687,7 @@
         "\n",
         "`-` Step2,3,4 는 너무 뻔해서.."
       ],
-      "id": "e05544b2-c69d-4b5f-8c18-f7d4750353e5"
+      "id": "31dc421a-8e38-4a93-9fcb-ab57e8fc46b0"
     },
     {
       "cell_type": "code",
